syntax = "proto3";

import "google/protobuf/empty.proto";

package account;

option java_multiple_files = true;
option java_package = "com.service.account";
option java_outer_classname = "AccountProto";

//-----------------------------------
// service
//-----------------------------------
service GrpcAccountService {
  rpc findAdmin(GrpcAdminRequest) returns (GrpcAdminResponse);
  rpc findUser(GrpcUserRequest) returns (GrpcUserResponse);
}

//-----------------------------------
// request
//-----------------------------------
message GrpcAdminRequest {
  uint64 adminSeq = 1;
  string adminId = 2;
  string adminPassword = 3;
  string adminName = 4;
  string adminType = 5;
  string email = 6;
}

message GrpcUserRequest {
  uint64 userSeq = 1;
  string userId = 2;
  string userPassword = 3;
  string userName = 4;
  string email = 5;
}

//-----------------------------------
// response
//-----------------------------------
message GrpcAdminResponse {
  uint64 adminSeq = 1;
  string adminId = 2;
  string adminPassword = 3;
  string adminName = 4;
  string adminType = 5;
  string email = 6;
}

message GrpcUserResponse {
  uint64 userSeq = 1;
  string userId = 2;
  string userPassword = 3;
  string userName = 4;
  string email = 5;
}
